syntax = "proto3";
package naming;

option go_package="./naming/;naming";

message registerServiceReq {
  string serviceName = 1;
  string IP = 2;
  int32 port = 3;
}

message registerServiceRsp {
  int32 errCode = 1;
  string msg = 2;
}

message findServiceReq {
  string serviceName = 1;
}

message findServiceRsp {
  int32 errCode = 1;
  string msg = 2;
  string serviceName = 3;
  string IP = 4;
  int32 port = 5;
}



service NamingService {
  rpc RegisterService(registerServiceReq) returns (registerServiceRsp) {}
  rpc FindService(findServiceReq) returns (findServiceRsp) {}
}